Refactored how validatable objects get their validator instance

--- a/Ceriyo.Core/Ceriyo.Core.csproj
+++ b/Ceriyo.Core/Ceriyo.Core.csproj
@@ -55,6 +55,10 @@
       <HintPath>..\packages\FluentValidation.6.2.1.0\lib\Net45\FluentValidation.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="MonoGame.Extended, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MonoGame.Extended.0.5.149\lib\MonoGame.Extended.dll</HintPath>
       <Private>True</Private>
@@ -106,10 +110,8 @@
     <Compile Include="Constants\ResourceType.cs" />
     <Compile Include="Constants\ScriptEngine.cs" />
     <Compile Include="Constants\ScriptEvent.cs" />
-    <Compile Include="Contracts\IModuleFactory.cs" />
-    <Compile Include="Contracts\IValidatorFactory.cs" />
     <Compile Include="Data\AreaData.cs" />
-    <Compile Include="Data\BaseDataRecord.cs" />
+    <Compile Include="Validation\BaseValidatable.cs" />
     <Compile Include="Data\SerializedFileData.cs" />
     <Compile Include="Data\ResourceItemData.cs" />
     <Compile Include="Data\SerializedManifestData.cs" />
@@ -197,23 +199,24 @@
     <Compile Include="UI\SampleDesktop.cs" />
     <Compile Include="UI\SquidRenderer.cs" />
     <Compile Include="Services\UIService.cs" />
-    <Compile Include="Validators\Components\ClassLevelValidator.cs" />
-    <Compile Include="Validators\Data\AbilityDataValidator.cs" />
-    <Compile Include="Validators\Data\AnimationDataValidator.cs" />
-    <Compile Include="Validators\Data\ClassDataValidator.cs" />
-    <Compile Include="Validators\Data\ClassRequirementDataValidator.cs" />
-    <Compile Include="Validators\Data\CreatureDataValidator.cs" />
-    <Compile Include="Validators\Data\DialogDataValidator.cs" />
-    <Compile Include="Validators\Data\FrameDataValidator.cs" />
-    <Compile Include="Validators\Data\ItemDataValidator.cs" />
-    <Compile Include="Validators\Data\ItemPropertyDataValidator.cs" />
-    <Compile Include="Validators\Data\ItemTypeDataValidator.cs" />
-    <Compile Include="Validators\Data\LocalVariableDataValidator.cs" />
-    <Compile Include="Validators\Data\ModuleDataValidator.cs" />
-    <Compile Include="Validators\Data\PlaceableDataValidator.cs" />
-    <Compile Include="Validators\Data\ScriptDataValidator.cs" />
-    <Compile Include="Validators\Data\SkillDataValidator.cs" />
-    <Compile Include="Validators\Data\TilesetDataValidator.cs" />
+    <Compile Include="Validation\Components\ClassLevelValidator.cs" />
+    <Compile Include="Validation\Data\AbilityDataValidator.cs" />
+    <Compile Include="Validation\Data\AnimationDataValidator.cs" />
+    <Compile Include="Validation\Data\AreaDataValidator.cs" />
+    <Compile Include="Validation\Data\ClassDataValidator.cs" />
+    <Compile Include="Validation\Data\ClassRequirementDataValidator.cs" />
+    <Compile Include="Validation\Data\CreatureDataValidator.cs" />
+    <Compile Include="Validation\Data\DialogDataValidator.cs" />
+    <Compile Include="Validation\Data\FrameDataValidator.cs" />
+    <Compile Include="Validation\Data\ItemDataValidator.cs" />
+    <Compile Include="Validation\Data\ItemPropertyDataValidator.cs" />
+    <Compile Include="Validation\Data\ItemTypeDataValidator.cs" />
+    <Compile Include="Validation\Data\LocalVariableDataValidator.cs" />
+    <Compile Include="Validation\Data\ModuleDataValidator.cs" />
+    <Compile Include="Validation\Data\PlaceableDataValidator.cs" />
+    <Compile Include="Validation\Data\ScriptDataValidator.cs" />
+    <Compile Include="Validation\Data\SkillDataValidator.cs" />
+    <Compile Include="Validation\Data\TilesetDataValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Systems\" />
