--- a/Ceriyo.Toolset.WPF/packages.config
+++ b/Ceriyo.Toolset.WPF/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.1.1" targetFramework="net461" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="2.9" targetFramework="net461" />
   <package id="FluentValidation" version="6.2.1.0" targetFramework="net461" />
@@ -8,6 +9,7 @@
   <package id="MonoGame.Extended" version="0.5.149" targetFramework="net461" />
   <package id="MonoGame.Framework.WindowsDX" version="3.5.1.1679" targetFramework="net461" />
   <package id="MonoGame.Framework.WpfInterop" version="1.3.0" targetFramework="net461" />
+  <package id="Moq" version="4.5.22" targetFramework="net461" />
   <package id="Prism.Autofac" version="6.2.0" targetFramework="net461" />
   <package id="Prism.Core" version="6.2.0" targetFramework="net461" />
   <package id="Prism.Wpf" version="6.2.0" targetFramework="net461" />
