--- a/Ceriyo.Infrastructure.WPF/packages.config
+++ b/Ceriyo.Infrastructure.WPF/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="FluentValidation" version="6.2.1.0" targetFramework="net461" />
+  <package id="MahApps.Metro" version="1.3.0" targetFramework="net461" />
   <package id="Prism.Core" version="6.2.0" targetFramework="net461" />
   <package id="Prism.Wpf" version="6.2.0" targetFramework="net461" />
 </packages>
