--- a/Ceriyo.Toolset.WPF/packages.config
+++ b/Ceriyo.Toolset.WPF/packages.config
@@ -6,6 +6,7 @@
   <package id="Extended.Wpf.Toolkit" version="2.9" targetFramework="net461" />
   <package id="FluentValidation" version="6.2.1.0" targetFramework="net461" />
   <package id="log4net" version="2.0.5" targetFramework="net461" />
+  <package id="MahApps.Metro" version="1.3.0" targetFramework="net461" />
   <package id="MonoGame.Extended" version="0.5.149" targetFramework="net461" />
   <package id="MonoGame.Framework.WindowsDX" version="3.5.1.1679" targetFramework="net461" />
   <package id="MonoGame.Framework.WpfInterop" version="1.3.0" targetFramework="net461" />
