Local double editor. Renamed all references to LocalFloat to LocalDouble

--- a/Ceriyo.Core/Ceriyo.Core.csproj
+++ b/Ceriyo.Core/Ceriyo.Core.csproj
@@ -111,7 +111,7 @@
     <Compile Include="Constants\ScriptEngine.cs" />
     <Compile Include="Constants\ScriptEvent.cs" />
     <Compile Include="Data\AreaData.cs" />
-    <Compile Include="Data\LocalFloatData.cs" />
+    <Compile Include="Data\LocalDoubleData.cs" />
     <Compile Include="Data\LocalStringData.cs" />
     <Compile Include="Observables\ObservablePair.cs" />
     <Compile Include="Validation\BaseValidatable.cs" />
