--- a/Ceriyo.Infrastructure/packages.config
+++ b/Ceriyo.Infrastructure/packages.config
@@ -3,10 +3,11 @@
   <package id="Autofac" version="4.1.1" targetFramework="net461" />
   <package id="AutoMapper" version="5.1.1" targetFramework="net461" />
   <package id="FluentValidation" version="6.2.1.0" targetFramework="net461" />
-  <package id="Jint" version="2.9.1" targetFramework="net461" />
+  <package id="jint" version="2.10" targetFramework="net461" />
   <package id="Lidgren.Network" version="1.0.2" targetFramework="net461" />
   <package id="log4net" version="2.0.5" targetFramework="net461" />
   <package id="MonoGame.Framework.WindowsDX" version="3.5.1.1679" targetFramework="net461" />
   <package id="NLua" version="1.3.2.1" targetFramework="net461" />
   <package id="protobuf-net" version="2.1.0" targetFramework="net461" />
+  <package id="System.Diagnostics.Contracts" version="4.0.1" targetFramework="net461" />
 </packages>
