--- a/Ceriyo.Toolset.WPF/packages.config
+++ b/Ceriyo.Toolset.WPF/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.1.1" targetFramework="net461" />
+  <package id="AutoMapper" version="5.1.1" targetFramework="net461" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="2.9" targetFramework="net461" />
