--- a/Ceriyo.Infrastructure.WPF/Ceriyo.Infrastructure.WPF.csproj
+++ b/Ceriyo.Infrastructure.WPF/Ceriyo.Infrastructure.WPF.csproj
@@ -63,6 +63,10 @@
       <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="MonoGame.Framework, Version=3.5.1.1679, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MonoGame.Framework.WindowsDX.3.5.1.1679\lib\net40\MonoGame.Framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="Prism, Version=6.2.0.0, Culture=neutral, PublicKeyToken=91a96d2a154366d8, processorArchitecture=MSIL">
@@ -73,6 +77,8 @@
       <HintPath>..\packages\Prism.Wpf.6.2.0\lib\net45\Prism.Wpf.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="SharpDX, Version=2.6.3.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1" />
+    <Reference Include="SharpDX.Direct3D9, Version=2.6.3.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -119,6 +125,16 @@
     <Compile Include="Controls\DoubleUpDownEx.cs" />
     <Compile Include="Controls\IntegerUpDownEx.cs" />
     <Compile Include="Extensions\EnumBindingSourceExtension.cs" />
+    <Compile Include="MonoGameWpfInterop\D3D11Host.cs" />
+    <Compile Include="MonoGameWpfInterop\D3D11Image.cs" />
+    <Compile Include="MonoGameWpfInterop\D3D9.cs" />
+    <Compile Include="MonoGameWpfInterop\Input\WindowHelper.cs" />
+    <Compile Include="MonoGameWpfInterop\Input\WPFKeyboard.cs" />
+    <Compile Include="MonoGameWpfInterop\Input\WPFMouse.cs" />
+    <Compile Include="MonoGameWpfInterop\WPFDrawableGameComponent.cs" />
+    <Compile Include="MonoGameWpfInterop\WPFGame.cs" />
+    <Compile Include="MonoGameWpfInterop\WPFGameComponent.cs" />
+    <Compile Include="MonoGameWpfInterop\WPFGraphicsDeviceService.cs" />
     <Compile Include="Observables\AbilityDataObservable.cs" />
     <Compile Include="Observables\AreaDataObservable.cs" />
     <Compile Include="Observables\ClassDataObservable.cs" />
