--- a/Ceriyo.Infrastructure.WPF/packages.config
+++ b/Ceriyo.Infrastructure.WPF/packages.config
@@ -4,6 +4,7 @@
   <package id="Extended.Wpf.Toolkit" version="2.9" targetFramework="net461" />
   <package id="FluentValidation" version="6.2.1.0" targetFramework="net461" />
   <package id="MahApps.Metro" version="1.3.0" targetFramework="net461" />
+  <package id="MonoGame.Framework.WindowsDX" version="3.5.1.1679" targetFramework="net461" />
   <package id="Prism.Core" version="6.2.0" targetFramework="net461" />
   <package id="Prism.Wpf" version="6.2.0" targetFramework="net461" />
 </packages>
