--- a/Ceriyo.Domain.Services/Ceriyo.Domain.Services.csproj
+++ b/Ceriyo.Domain.Services/Ceriyo.Domain.Services.csproj
@@ -65,9 +65,11 @@
     <Compile Include="Contracts\IDomainServiceNotifier.cs" />
     <Compile Include="DataServices\Contracts\IDataEditorDomainService.cs" />
     <Compile Include="DataServices\Contracts\IModuleDomainService.cs" />
+    <Compile Include="DataServices\Contracts\IModuleResourceDomainService.cs" />
     <Compile Include="DataServices\Contracts\IResourceEditorDomainService.cs" />
     <Compile Include="DataServices\DataEditorDomainService.cs" />
     <Compile Include="DataServices\ModuleDomainService.cs" />
+    <Compile Include="DataServices\ModuleResourceDomainService.cs" />
     <Compile Include="DataServices\ResourceEditorDomainService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
