Refactoring of validation / interfaces on observables and domain objects. Area creation process

--- a/Ceriyo.Domain.Services/Ceriyo.Domain.Services.csproj
+++ b/Ceriyo.Domain.Services/Ceriyo.Domain.Services.csproj
@@ -63,6 +63,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contracts\IDomainServiceNotifier.cs" />
+    <Compile Include="DataServices\AreaDomainService.cs" />
+    <Compile Include="DataServices\Contracts\IAreaDomainService.cs" />
     <Compile Include="DataServices\Contracts\IDataEditorDomainService.cs" />
     <Compile Include="DataServices\Contracts\IModuleDomainService.cs" />
     <Compile Include="DataServices\Contracts\IModuleResourceDomainService.cs" />
