Area properties window

--- a/Ceriyo.Toolset.WPF/Ceriyo.Toolset.WPF.csproj
+++ b/Ceriyo.Toolset.WPF/Ceriyo.Toolset.WPF.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Events\Area\AreaCreatedEvent.cs" />
     <Compile Include="Events\Area\AreaDeletedEvent.cs" />
     <Compile Include="Events\Area\AreaPropertiesChangedEvent.cs" />
+    <Compile Include="Events\Area\AreaPropertiesOpenedEvent.cs" />
     <Compile Include="Events\Area\AreaRenamedEvent.cs" />
     <Compile Include="Events\Class\ClassChangedEvent.cs" />
     <Compile Include="Events\Class\ClassCreatedEvent.cs" />
