--- a/Ceriyo.Game.Windows/Ceriyo.Game.Windows.csproj
+++ b/Ceriyo.Game.Windows/Ceriyo.Game.Windows.csproj
@@ -44,9 +44,12 @@
   <ItemGroup>
     <Compile Include="Factory\GameFactory.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="GameInputService.cs" />
     <Compile Include="GameIOCConfig.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Screens\GameScreen.cs" />
+    <Compile Include="Services\GameService.cs" />
     <Compile Include="UI\Views\MainMenuView\MainMenuViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
