--- a/Ceriyo.Infrastructure/Ceriyo.Infrastructure.csproj
+++ b/Ceriyo.Infrastructure/Ceriyo.Infrastructure.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Factory\ComponentFactory.cs" />
     <Compile Include="Factory\EntityFactory.cs" />
     <Compile Include="Factory\ScreenFactory.cs" />
+    <Compile Include="Helpers\IOCHelpers.cs" />
     <Compile Include="Logging\Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DataService.cs" />
